--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>推文归档 - 首页</title>
+    <title>推文归档</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>推文归档</h1>
     </header>
-    <div id="user-list" class="user-grid"></div>
+    <div id="user-list"></div>
     <script src="common.js"></script>
     <script src="icon.js"></script>
     <script>
