--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <header>
         <h1>推文归档</h1>
     </header>
+    <div id="sidebar">
+        <div class="sidebar-toggle">📖</div>
+        <div class="sidebar-content">
+            <input type="text" id="sidebar-search" placeholder="搜索...">
+            <ul id="category-list"></ul>
+        </div>
+    </div>
     <div id="user-list"></div>
     <script src="common.js"></script>
     <script src="icon.js"></script>
