--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>推文归档</h1>
     </header>
+    <div id="sidebar-toggle" class="sidebar-toggle">📖</div>
     <div id="sidebar">
-        <div class="sidebar-toggle">📖</div>
         <div class="sidebar-content">
             <input type="text" id="sidebar-search" placeholder="搜索...">
             <ul id="category-list"></ul>
